--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Feb 25 2025 08:03:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdba8" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -98,7 +98,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="sokiu-pamoku-kainos.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
+                        <a href="https://kunu.reservio.com/#events-section" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -302,7 +302,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div data-w-id="e7a66038-136f-2ce0-0bf8-9453eb96fcdd" class="action-section">
     <div class="stacked-con">
-      <div data-w-id="e7a66038-136f-2ce0-0bf8-9453eb96fcdf" style="opacity:0" class="action-heading-wrapper">
+      <div class="action-heading-wrapper">
         <div class="rotating-text">
           <h2 class="slide-heading xl">menas</h2>
           <div class="white-dot"></div>
@@ -317,8 +317,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="bottom-action-part">
         <div id="w-node-e7a66038-136f-2ce0-0bf8-9453eb96fced-431bdba8" class="best-nevo-content">
-          <p data-w-id="e7a66038-136f-2ce0-0bf8-9453eb96fcee" style="opacity:0" class="portfolio-white-text">„Esame aistringi menininkai, kurie į kiekvieną pamoką atsineša profesionalumą ir meilę šokiui.“</p>
-          <div data-w-id="e7a66038-136f-2ce0-0bf8-9453eb96fcf0" style="opacity:0" class="buttons-wrapper">
+          <p class="portfolio-white-text">„Esame aistringi menininkai, kurie į kiekvieną pamoką atsineša profesionalumą ir meilę šokiui.“</p>
+          <div class="buttons-wrapper">
             <div class="no-shrink">
               <a href="mokytojai.html" class="white-april-button w-button">MŪSŲ MoKYTOJAI</a>
             </div>
@@ -338,7 +338,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="gray-section">
     <div class="grid-wrapper">
       <div id="w-node-_787c48df-fb40-37ff-a6f3-01c6fd94ddc5-431bdba8" class="our-instructors">
-        <div id="w-node-a8e09033-dc3d-83ff-ffe7-4fff90344549-431bdba8" class="events-collection-list-wrapper">
+        <div class="events-collection-list-wrapper">
           <div class="instructor-grid">
             <div class="events-name">
               <div class="team-item-card-2">
@@ -350,7 +350,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           <a href="https://kunu.studio/mokytojai#egleu" class="team-link w-inline-block">
                             <p class="par-hidden">H</p>
                           </a>
-                          <div id="w-node-a9e38041-d19e-8917-5356-bf5cf754a43e-cbfe04b6" class="view-trainer">
+                          <div class="view-trainer">
                             <div class="arrow-icon-wrapper"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                           </div>
                         </div>
@@ -372,7 +372,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="scroll-cover-white"></div>
               </div>
             </div>
-            <div id="w-node-_254440b7-fac1-775a-95c3-ae12cbfe04d2-cbfe04b6" class="events-name">
+            <div class="events-name">
               <div class="team-item-card-2">
                 <div class="outline-team-card-2">
                   <div class="team-intro-card">
@@ -382,7 +382,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           <a href="https://kunu.studio/mokytojai#eglek" class="team-link w-inline-block">
                             <p class="par-hidden">H</p>
                           </a>
-                          <div id="w-node-_90d2fc71-15cc-9253-55cd-169c9e706ce3-cbfe04b6" class="view-trainer">
+                          <div class="view-trainer">
                             <div class="arrow-icon-wrapper"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                           </div>
                         </div>
@@ -404,7 +404,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="scroll-cover-white"></div>
               </div>
             </div>
-            <div id="w-node-_254440b7-fac1-775a-95c3-ae12cbfe04ed-cbfe04b6" class="events-name">
+            <div class="events-name">
               <div class="team-item-card-2">
                 <div class="outline-team-card-2">
                   <div class="team-intro-card">
@@ -414,7 +414,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           <a href="https://kunu.studio/mokytojai#jolita" class="team-link w-inline-block">
                             <p class="par-hidden">H</p>
                           </a>
-                          <div id="w-node-afb74091-a8dd-3844-b0cd-b2ca833f15d4-cbfe04b6" class="view-trainer">
+                          <div class="view-trainer">
                             <div class="arrow-icon-wrapper"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                           </div>
                         </div>
@@ -436,7 +436,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="scroll-cover-white"></div>
               </div>
             </div>
-            <div id="w-node-_254440b7-fac1-775a-95c3-ae12cbfe0508-cbfe04b6" class="events-name">
+            <div class="events-name">
               <div class="team-item-card-2">
                 <div class="outline-team-card-2">
                   <div class="team-intro-card">
@@ -446,7 +446,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           <a href="https://kunu.studio/mokytojai#neringa" class="team-link w-inline-block">
                             <p class="par-hidden">H</p>
                           </a>
-                          <div id="w-node-_892471ca-25bd-b1e1-ac88-067175e39e2f-cbfe04b6" class="view-trainer">
+                          <div class="view-trainer">
                             <div class="arrow-icon-wrapper"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                           </div>
                         </div>
@@ -625,7 +625,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="link-text">Visos klasės</div>
                     </div>
                   </a>
-                  <a href="kontaktai.html" class="footer-arrow-link w-inline-block">
+                  <a href="https://kunu.reservio.com/#events-section" class="footer-arrow-link w-inline-block">
                     <div class="button-text-wrapper">
                       <div class="link-text">registracija</div>
                     </div>
@@ -679,7 +679,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="footer-bottom-3">
         <div class="footer-copyright-3">© KUNU Studio</div>
         <div class="footer-rights-wrapper-2">
-          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, LT-11342 Vilnius</div>
+          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
         </div>
       </div>
     </div>
