--- a/mokytojai.html
+++ b/mokytojai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Feb 25 2025 08:03:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67482406b467d25d8035ca92" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="sokiu-pamoku-kainos.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
+                        <a href="https://kunu.reservio.com/#events-section" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -245,7 +245,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="gray-section">
     <div class="grid-wrapper">
       <div id="w-node-_561f5b90-6967-ae24-04b7-f265b337fd7b-8035ca92" class="our-instructors">
-        <div id="w-node-_720272e8-50c2-7912-7994-68f38c83e7ab-8035ca92" class="events-collection-list-wrapper">
+        <div class="events-collection-list-wrapper">
           <div class="grid_mokytojai">
             <div id="egleu" class="events-item">
               <div class="team-item-card-2">
@@ -267,7 +267,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </div>
                     </div>
                   </div>
-                  <div id="w-node-f6349b5c-7d13-db18-7e29-faab65448c48-8035ca92" class="team-intro-card---right">
+                  <div class="team-intro-card---right">
                     <div data-w-id="36ae2d6d-65e5-d4d7-2d38-576a72ebba0b" class="portfolio-rich-text w-richtext">
                       <h2>Eglė Ukanytė</h2>
                       <p>Eglė yra &quot;KUNU&quot; studijos įkūrėja ir laisvai samdoma šokio menininkė ir choreografė, turinti meninį bei pedagonį išsilavinimą. Eglė yra stažavusis Romos ir Milano šokio akademijose. Tuo metu taip pat dirbo teatre šokio atlikėja ir 2023 m. įkūrė savo jaunimo šokio teatrą tokiu pat pavadinimu &quot;KUNU&quot;. </p>
@@ -305,7 +305,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </div>
                     </div>
                   </div>
-                  <div id="w-node-_9ccebc4e-662f-1a86-7aa1-7e3d2052c343-8035ca92" class="team-intro-card---right">
+                  <div class="team-intro-card---right">
                     <div data-w-id="36270f02-5776-a57a-1cec-5b7522cd4160" class="portfolio-rich-text w-richtext">
                       <h2>Eglė Kraujalė</h2>
                       <p>Eglės požiūris į šokį kaip identiteto ir kūrybinės išraiškos formą išryškina kūno kaip komunikacijos priemonės svarbą. Ji pabrėžia, kad mūsų kūnai perteikia emocijas ir patirtis, kurios negali būti visiškai apibūdintos žodžiais.</p>
@@ -339,7 +339,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </div>
                     </div>
                   </div>
-                  <div id="w-node-ef5984cb-b4b7-958a-b84b-8b214d32d80d-8035ca92" class="team-intro-card---right">
+                  <div class="team-intro-card---right">
                     <div data-w-id="8dbd4131-cb99-a01d-69f1-01a11fa02ca5" class="portfolio-rich-text w-richtext">
                       <h2>Jolita Svidraitė</h2>
                       <p>,,Esu aukštos kvalifikacijos ir įvairiapusė šokėja, turinti tvirtą pagrindą tiek klasikinio, tiek šiuolaikinio šokio srityse. Įgijau šokio menininko diplomą Nacionalinėje M. K. Čiurlionio menų mokykloje, kurioje mokiausi nuo 2012 iki 2021 metų. Neseniai baigiau šokio bakalauro studijas Barselonos Menų institute, bendradarbiaujant su Liverpulio John Moores universitetu (2021-2024).”</p>
@@ -371,7 +371,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       </div>
                     </div>
                   </div>
-                  <div id="w-node-d60affbe-18da-28a6-be98-53b8ba33c258-8035ca92" class="team-intro-card---right">
+                  <div class="team-intro-card---right">
                     <div data-w-id="944ce87a-8b60-e114-c996-36a769855757" class="portfolio-rich-text w-richtext">
                       <h2>Neringa Masionytė</h2>
                       <p>Neringa – buvusi gimnastė. Per daugiau nei trylika metų aktyvios karjeros ji buvo Lietuvos rinktinės narė, dalyvavo Europos bei pasaulio čempionatuose. </p>
@@ -459,7 +459,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="link-text">Visos klasės</div>
                     </div>
                   </a>
-                  <a href="kontaktai.html" class="footer-arrow-link w-inline-block">
+                  <a href="https://kunu.reservio.com/#events-section" class="footer-arrow-link w-inline-block">
                     <div class="button-text-wrapper">
                       <div class="link-text">registracija</div>
                     </div>
@@ -513,7 +513,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="footer-bottom-3">
         <div class="footer-copyright-3">© KUNU Studio</div>
         <div class="footer-rights-wrapper-2">
-          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, LT-11342 Vilnius</div>
+          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
         </div>
       </div>
     </div>
