--- a/sokio-pamokos.html
+++ b/sokio-pamokos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Feb 25 2025 08:03:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdb82" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -98,7 +98,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="sokiu-pamoku-kainos.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
+                        <a href="https://kunu.reservio.com/#events-section" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -217,14 +217,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
     <div data-w-id="cffaa0d6-0cd7-3509-9f08-dbbd1e309db4" class="search-close-button"></div>
   </form>
-  <div data-w-id="b10566e5-96f8-834d-eee0-44cdabe676b3" class="classes-2-banner">
+  <div class="classes-2-banner">
     <div class="hero-background-3">
       <div class="hero-collection-wrapper">
         <div class="home-3-con">
           <div class="home-3-item">
             <div class="slider-background-wrap hero-wrapper">
               <div class="slider-background-home-3">
-                <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="background-april one">
+                <div class="background-april one">
                   <div class="overlay-light-dark gradient"></div>
                 </div>
               </div>
@@ -237,7 +237,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div id="w-node-b10566e5-96f8-834d-eee0-44cdabe676bd-431bdb82" class="banner-hero-content">
         <div id="w-node-b10566e5-96f8-834d-eee0-44cdabe676be-431bdb82" class="hero-top">
           <div class="hero-intro">
-            <h1 data-w-id="b10566e5-96f8-834d-eee0-44cdabe676c0" style="opacity:0" class="title-3 class-2-title">Šokio pamokos vaikams ir suaugusiems</h1>
+            <h1 class="title-3 class-2-title">Šokio pamokos vaikams ir suaugusiems</h1>
           </div>
         </div>
       </div>
@@ -295,7 +295,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-e5a591a2-e7a7-4fbc-6fe5-8e018c4037a2-431bdb82" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="e5a591a2-e7a7-4fbc-6fe5-8e018c4037a3" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -340,7 +340,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-_3a257c64-c857-3d6f-44e7-851a91e90a08-431bdb82" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="3a257c64-c857-3d6f-44e7-851a91e90a09" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -385,7 +385,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-ead12e49-645e-2b3f-596a-64d608ab13b5-431bdb82" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="ead12e49-645e-2b3f-596a-64d608ab13b6" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -430,7 +430,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-f3ad2da3-be08-8dc3-3b9d-3f4b2294ce57-431bdb82" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="f3ad2da3-be08-8dc3-3b9d-3f4b2294ce58" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -482,7 +482,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="collection-product-list-wrapper">
             <h2 class="padding-bottom padding-medium">Šokio pamokos suaugusiems</h2>
             <div class="grid_classes">
-              <div id="w-node-def5458d-f0ca-159d-09c3-9fb1ee0b6d83-431bdb82" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="def5458d-f0ca-159d-09c3-9fb1ee0b6d84" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -527,7 +527,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-_0aa3ae94-4982-b445-edbe-11eece00b582-431bdb82" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="0aa3ae94-4982-b445-edbe-11eece00b583" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -572,7 +572,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-_2ec90d84-0191-ac44-7b5e-0a1dacbc70d2-431bdb82" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="2ec90d84-0191-ac44-7b5e-0a1dacbc70d3" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -617,7 +617,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-_6ac2febf-5ac2-a82f-e4ae-00a816526929-431bdb82" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="6ac2febf-5ac2-a82f-e4ae-00a81652692a" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -688,7 +688,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div data-w-id="9c74aa10-f40f-cdcf-5d0b-5dd508816e23" class="buttons-wrap">
                   <div class="no-shrink">
-                    <a href="kontaktai.html" class="white-april-button full-mobile w-button">REGISTRACIJA</a>
+                    <a href="https://kunu.reservio.com/#events-section" class="white-april-button full-mobile w-button">REGISTRACIJA</a>
                   </div>
                   <div class="no-shrink">
                     <a href="tvarkarastis.html" class="secondary-white-button w-button">TVARKARAŠTIS</a>
@@ -706,11 +706,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div data-w-id="b2526812-3d43-955a-8e7c-55e321725209" class="faq-grid-pricing">
         <div id="w-node-b2526812-3d43-955a-8e7c-55e32172520a-21725207" class="story-content">
           <div class="faq-list-wrapper">
-            <div data-w-id="b2526812-3d43-955a-8e7c-55e32172520c" class="full-width-faq-list">
+            <div class="full-width-faq-list">
               <div class="line top">
                 <div class="line-faq-fill"></div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172520f" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kokius šokių stilius rasite KUNU studijoje?</div>
                   <div class="faq-cross-icon">
@@ -731,7 +731,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172521e" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kas yra KUNU Studio mokytojai?</div>
                   <div class="faq-cross-icon">
@@ -752,7 +752,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172522d" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar galiu prisijungti prie KUNU Studio kaip pradedantysis?</div>
                   <div class="faq-cross-icon">
@@ -773,7 +773,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172523c" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kokias amžiaus grupes aptarnaujate?</div>
                   <div class="faq-cross-icon">
@@ -794,7 +794,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172524b" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar studijoje organizuojamos pasirodymų galimybės?</div>
                   <div class="faq-cross-icon">
@@ -815,7 +815,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172525a" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kaip galiu užsiregistruoti į pamokas?</div>
                   <div class="faq-cross-icon">
@@ -836,7 +836,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e321725269" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kuo KUNU Studio yra unikali?</div>
                   <div class="faq-cross-icon">
@@ -857,7 +857,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e321725278" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar siūlote privačias pamokas?</div>
                   <div class="faq-cross-icon">
@@ -1016,7 +1016,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="link-text">Visos klasės</div>
                     </div>
                   </a>
-                  <a href="kontaktai.html" class="footer-arrow-link w-inline-block">
+                  <a href="https://kunu.reservio.com/#events-section" class="footer-arrow-link w-inline-block">
                     <div class="button-text-wrapper">
                       <div class="link-text">registracija</div>
                     </div>
@@ -1070,7 +1070,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="footer-bottom-3">
         <div class="footer-copyright-3">© KUNU Studio</div>
         <div class="footer-rights-wrapper-2">
-          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, LT-11342 Vilnius</div>
+          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
         </div>
       </div>
     </div>
