--- a/sokiu-studijos-nuoma-vilniuje.html
+++ b/sokiu-studijos-nuoma-vilniuje.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Feb 25 2025 08:03:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674949cd74a9a24b9e488981" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="sokiu-pamoku-kainos.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
+                        <a href="https://kunu.reservio.com/#events-section" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -229,7 +229,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <div class="events-item">
                               <div class="team-item-card-2">
                                 <div class="contact_map_inner">
-                                  <div id="w-node-_19a8903f-62d2-1c4c-d486-ef6c7a8912a0-9e488981" class="team-intro-card---right text-right">
+                                  <div class="team-intro-card---right text-right">
                                     <div class="w-richtext">
                                       <p>Reikia tinkamos erdvės repeticijoms, renginiams ar kūrybinėms dirbtuvėms? Nuomokite profesionaliai įrengtą šokio studiją Vilniuje, pritaikytą tiek šokėjų, choreografų, tiek ir kitų menininkų poreikiams.</p>
                                       <p>Studijoje rasite erdvią salę su veidrodžiais, specialią šokių dangą, persirengimo erdvę, garso įrangą bei viską, kas reikalinga jūsų kūrybiniam procesui.</p>
@@ -263,13 +263,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <div class="events-item">
                               <div class="team-item-card-2">
                                 <div class="contact_map_inner">
-                                  <div id="w-node-e0110489-db9e-3ec4-750b-5cee155ad00c-9e488981" class="team-intro-card---right">
+                                  <div class="team-intro-card---right">
                                     <div class="text-align-right w-richtext">
                                       <p>Kunu Studio randasi Manufaktūrų g. 16, Vilniuje. <br>Einant Manufaktūrų gatve pasukt į kaire ties pastatu su Harley Davidson logotipu. <br>Įėjimas į studiją yra iš vidinio kiemo, apėjus Harley Davidson pastatą. Studijas randasi antrame aukšte.<br><br>
                                         <a href="https://maps.app.goo.gl/pkjAKBXXCirLnpq78" target="_blank">Google žemelapio nuoroda</a>
                                       </p>
                                     </div>
-                                    <div id="w-node-e0110489-db9e-3ec4-750b-5cee155ad018-9e488981">
+                                    <div>
                                       <div class="w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2306.811704820083!2d25.314612277876254!3d54.67774247270527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dd956b8de532f7%3A0x5e19db2979de2867!2sKunu%20Studio!5e0!3m2!1sen!2slt!4v1729783412139!5m2!1sen!2slt" width="100%" height="450px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                                     </div>
                                   </div>
@@ -360,7 +360,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="link-text">Visos klasės</div>
                     </div>
                   </a>
-                  <a href="kontaktai.html" class="footer-arrow-link w-inline-block">
+                  <a href="https://kunu.reservio.com/#events-section" class="footer-arrow-link w-inline-block">
                     <div class="button-text-wrapper">
                       <div class="link-text">registracija</div>
                     </div>
@@ -414,7 +414,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="footer-bottom-3">
         <div class="footer-copyright-3">© KUNU Studio</div>
         <div class="footer-rights-wrapper-2">
-          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, LT-11342 Vilnius</div>
+          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
         </div>
       </div>
     </div>
