--- a/tvarkarastis.html
+++ b/tvarkarastis.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Feb 25 2025 08:03:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdbad" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="sokiu-pamoku-kainos.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
+                        <a href="https://kunu.reservio.com/#events-section" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -258,13 +258,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <a data-w-tab="III" class="tvark_tab_link w-inline-block w-tab-link">
                   <div>III</div>
                 </a>
-                <a data-w-tab="IV" id="w-node-d4605c5b-83b9-7be7-0114-f1ad42aa087e-431bdbad" class="tvark_tab_link w-inline-block w-tab-link">
+                <a data-w-tab="IV" class="tvark_tab_link w-inline-block w-tab-link">
                   <div>IV</div>
                 </a>
-                <a data-w-tab="V" id="w-node-e4689e85-4ac0-371c-7def-e6cf8a805144-431bdbad" class="tvark_tab_link w-inline-block w-tab-link">
+                <a data-w-tab="V" class="tvark_tab_link w-inline-block w-tab-link">
                   <div>V</div>
                 </a>
-                <a data-w-tab="VII" id="w-node-b6f76120-7172-688c-f403-d65f3a5b8fd1-431bdbad" class="tvark_tab_link w-inline-block w-tab-link">
+                <a data-w-tab="VII" class="tvark_tab_link w-inline-block w-tab-link">
                   <div>VII</div>
                 </a>
               </div>
@@ -424,7 +424,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           <div class="text-white">17:30-18:20</div>
                         </div>
                         <div id="w-node-c38c351f-b38e-07cd-d09e-f981a34acf15-431bdbad" class="class_schedule_details">
-                          <div class="text-white">Šiuolaikinis Šokis Paaugliams (advanced)</div>
+                          <div class="text-white">Šiuolaikinis Šokis Vaikams (7-9m)</div>
                         </div>
                         <div id="w-node-c38c351f-b38e-07cd-d09e-f981a34acf18-431bdbad" class="class_schedule_details">
                           <div class="text-white">Jolita Svidraitė</div>
@@ -708,7 +708,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div data-w-id="9c74aa10-f40f-cdcf-5d0b-5dd508816e23" class="buttons-wrap">
                   <div class="no-shrink">
-                    <a href="kontaktai.html" class="white-april-button full-mobile w-button">REGISTRACIJA</a>
+                    <a href="https://kunu.reservio.com/#events-section" class="white-april-button full-mobile w-button">REGISTRACIJA</a>
                   </div>
                   <div class="no-shrink">
                     <a href="tvarkarastis.html" aria-current="page" class="secondary-white-button w-button w--current">TVARKARAŠTIS</a>
@@ -726,11 +726,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div data-w-id="b2526812-3d43-955a-8e7c-55e321725209" class="faq-grid-pricing">
         <div id="w-node-b2526812-3d43-955a-8e7c-55e32172520a-21725207" class="story-content">
           <div class="faq-list-wrapper">
-            <div data-w-id="b2526812-3d43-955a-8e7c-55e32172520c" class="full-width-faq-list">
+            <div class="full-width-faq-list">
               <div class="line top">
                 <div class="line-faq-fill"></div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172520f" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kokius šokių stilius rasite KUNU studijoje?</div>
                   <div class="faq-cross-icon">
@@ -751,7 +751,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172521e" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kas yra KUNU Studio mokytojai?</div>
                   <div class="faq-cross-icon">
@@ -772,7 +772,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172522d" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar galiu prisijungti prie KUNU Studio kaip pradedantysis?</div>
                   <div class="faq-cross-icon">
@@ -793,7 +793,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172523c" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kokias amžiaus grupes aptarnaujate?</div>
                   <div class="faq-cross-icon">
@@ -814,7 +814,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172524b" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar studijoje organizuojamos pasirodymų galimybės?</div>
                   <div class="faq-cross-icon">
@@ -835,7 +835,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172525a" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kaip galiu užsiregistruoti į pamokas?</div>
                   <div class="faq-cross-icon">
@@ -856,7 +856,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e321725269" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kuo KUNU Studio yra unikali?</div>
                   <div class="faq-cross-icon">
@@ -877,7 +877,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e321725278" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar siūlote privačias pamokas?</div>
                   <div class="faq-cross-icon">
@@ -1036,7 +1036,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="link-text">Visos klasės</div>
                     </div>
                   </a>
-                  <a href="kontaktai.html" class="footer-arrow-link w-inline-block">
+                  <a href="https://kunu.reservio.com/#events-section" class="footer-arrow-link w-inline-block">
                     <div class="button-text-wrapper">
                       <div class="link-text">registracija</div>
                     </div>
@@ -1090,7 +1090,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="footer-bottom-3">
         <div class="footer-copyright-3">© KUNU Studio</div>
         <div class="footer-rights-wrapper-2">
-          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, LT-11342 Vilnius</div>
+          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
         </div>
       </div>
     </div>
