--- a/aciu.html
+++ b/aciu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Feb 25 2025 08:03:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="675878adf597b3ae3c60cd3e" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -57,7 +57,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div data-w-id="350a0884-6aec-5de8-38cd-5c7d619a049b" style="opacity:0" class="_404-content-wrapper-2">
           <h2 class="error-404-text text-white">Netrukus susieksime</h2>
           <p class="_404-text text-white-2"></p>
-          <div id="w-node-_66f6c426-6ae3-f10f-3ce8-9cbfaeb0cce6-3c60cd3e" class="footer-right-form center-middle">
+          <div class="footer-right-form center-middle">
             <h2 class="error-404-text text-white">Prisijunkite prie KUNU bendruomenės</h2>
             <h6 class="nav-footer-item-2 text-white"></h6>
             <p class="footer-description text-white">Pirmi sužinokite apie artejančius reginius ir seminarus ir bendruomenės naujienas</p>
@@ -69,7 +69,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
           <div class="no-shrink-btn full-mobile">
             <div class="button-hero-wrapper">
-              <a href="wireframes/home-1.html" class="button-transparent w-inline-block">
+              <a href="index.html" class="button-transparent w-inline-block">
                 <div class="clip-2">
                   <div class="btn-banner-text">
                     <div class="btn-title-text dark-text">Grįžti į Pagrindinį Puslapį</div>
