--- a/kontaktai.html
+++ b/kontaktai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Feb 25 2025 08:03:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="674829a03ff763632940d900" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="sokiu-pamoku-kainos.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
+                        <a href="https://kunu.reservio.com/#events-section" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -264,16 +264,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                               <div class="field-block">
                                 <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad84380c-ad843808" class="field-label-3 mb-0">Vardas*</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad84380e-ad843808 w-input" maxlength="256" name="Name" data-name="Name" placeholder="Vardas" type="text" id="Name-2" required="">
                               </div>
-                              <div id="w-node-d46d82c1-40f2-314f-f684-5074ad84380f-ad843808" class="field-block">
+                              <div class="field-block">
                                 <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843810-ad843808" class="field-label-3 mb-0">El. Paštas*</h6><input class="form-input w-node-d46d82c1-40f2-314f-f684-5074ad843812-ad843808 w-input" maxlength="256" name="Email" data-name="Email" placeholder="El. Paštas" type="email" id="Email-7" required="">
                               </div>
-                              <div id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc6-ad843808" class="field-block">
+                              <div class="field-block">
                                 <h6 id="w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc7-ad843808" class="field-label-3 mb-0">Telefonas*</h6><input class="form-input w-node-_91ee0abb-cbbc-41d0-f24f-ff661e59ccc9-ad843808 w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Telefonas" type="tel" id="Phone" required="">
                               </div>
                               <div class="field-block">
                                 <h6 id="w-node-d46d82c1-40f2-314f-f684-5074ad843814-ad843808" class="field-label-3 mb-0">žinutė*</h6><textarea id="Message-3" name="Message" maxlength="5000" data-name="Message" placeholder="Žinutė" required="" class="form-input message-input w-node-d46d82c1-40f2-314f-f684-5074ad843816-ad843808 w-input"></textarea>
                               </div>
-                              <div id="w-node-_755cd7f7-9147-d9f4-aace-4bfd6dbd50b7-ad843808" class="w-embed w-script">
+                              <div class="w-embed w-script">
                                 <script></script>
                                 <input type="hidden" id="utm_source" placeholder="utm_source" name="utm_source">
                                 <input type="hidden" id="utm_medium" placeholder="utm_medium" name="utm_medium">
@@ -313,7 +313,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                           <p class="dropdown-text">(0-628) 19 320</p>
                         </div>
                       </a>
-                      <a id="w-node-_194ef073-fb15-6b66-1979-166b472ccfc4-472ccfbb" href="https://ig.me/m/kunustudio.vilnius" class="secondary-black-button w-button">Instagram Messenger</a>
+                      <a href="https://ig.me/m/kunustudio.vilnius" class="secondary-black-button w-button">Instagram Messenger</a>
                       <a href="https://ig.me/m/kunustudio.vilnius" target="_blank" class="contact-us-link mobile w-inline-block">
                         <div class="line-link-wrap">
                           <p class="dropdown-text">INSTAGRAM <br>MESSENGER</p>
@@ -345,13 +345,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <div class="events-item">
                               <div class="team-item-card-2">
                                 <div class="contact_map_inner">
-                                  <div id="w-node-_19a8903f-62d2-1c4c-d486-ef6c7a8912a0-2940d900" class="team-intro-card---right">
+                                  <div class="team-intro-card---right">
                                     <div class="text-align-right w-richtext">
                                       <p>Kunu Studio randasi Manufaktūrų g. 16, Vilniuje. <br>Einant Manufaktūrų gatve pasukt į kairę ties pastatu su Harley Davidson logotipu. <br>Įėjimas į studiją yra iš vidinio kiemo, apėjus Harley Davidson pastatą. Studijas randasi antrame aukšte.<br><br>
                                         <a href="https://maps.app.goo.gl/pkjAKBXXCirLnpq78" target="_blank">Google žemelapio nuoroda</a>
                                       </p>
                                     </div>
-                                    <div id="w-node-_1dc2f4ed-4363-6425-c05a-9a28edd80066-2940d900">
+                                    <div>
                                       <div class="w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2306.811704820083!2d25.314612277876254!3d54.67774247270527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dd956b8de532f7%3A0x5e19db2979de2867!2sKunu%20Studio!5e0!3m2!1sen!2slt!4v1729783412139!5m2!1sen!2slt" width="100%" height="450px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                                     </div>
                                   </div>
@@ -442,7 +442,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="link-text">Visos klasės</div>
                     </div>
                   </a>
-                  <a href="kontaktai.html" aria-current="page" class="footer-arrow-link w-inline-block w--current">
+                  <a href="https://kunu.reservio.com/#events-section" class="footer-arrow-link w-inline-block">
                     <div class="button-text-wrapper">
                       <div class="link-text">registracija</div>
                     </div>
@@ -496,7 +496,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="footer-bottom-3">
         <div class="footer-copyright-3">© KUNU Studio</div>
         <div class="footer-rights-wrapper-2">
-          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, LT-11342 Vilnius</div>
+          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
         </div>
       </div>
     </div>
