--- a/privacios-sokio-pamokos.html
+++ b/privacios-sokio-pamokos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Feb 25 2025 08:03:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="675800493ae2e75317f81b76" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="sokiu-pamoku-kainos.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
+                        <a href="https://kunu.reservio.com/#events-section" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -229,7 +229,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <div class="events-item">
                               <div class="team-item-card-2">
                                 <div class="contact_map_inner">
-                                  <div id="w-node-_19a8903f-62d2-1c4c-d486-ef6c7a8912a0-17f81b76" class="team-intro-card---right no-padding-left">
+                                  <div class="team-intro-card---right no-padding-left">
                                     <div class="w-richtext">
                                       <p>Siūlome privačias šokio pamokas ir treniruotes tiek vaikam tiek suaugusiems. Individualių užsiėmimų metu pritaikysim choreografiją pagal kiekvieno šokėjo lygį. Vaikams šios pamokos suteikia smagią, kūrybišką aplinką, kurioje jie gali lavinti koordinaciją, ritmo pojūtį ir pasitikėjimą savimi per šokį. Suaugusiems pamokos suteikia galimybę išmokti naujų šokio stilių, tobulinti techniką ar tiesiog atrasti judesio džiaugsmą.<br></p>
                                       <p>Galime padengti įvairius šokio stilius: klasikinį bei šiuolaikinį baletą, šiuolaikinį šokį, gimnastiką.</p>
@@ -248,10 +248,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
               </div>
             </div>
-            <div id="w-node-acb39587-3cb8-b312-ae44-3a01f9a52332-17f81b76" class="our-instructors no-padding-top">
-              <div id="w-node-acb39587-3cb8-b312-ae44-3a01f9a52333-17f81b76" class="events-collection-list-wrapper">
+            <div class="our-instructors no-padding-top">
+              <div class="events-collection-list-wrapper">
                 <div class="spacing-wrapper large"></div>
-                <h2 id="w-node-_9a035166-2c2a-15b1-dacf-86f7be8b79c9-17f81b76" class="contact-us-title-2">Mūsų mokytojai</h2>
+                <h2 class="contact-us-title-2">Mūsų mokytojai</h2>
                 <div class="instructor-grid">
                   <div class="events-name">
                     <div class="team-item-card-2">
@@ -263,7 +263,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                 <a href="https://kunu.studio/mokytojai#egleu" class="team-link w-inline-block">
                                   <p class="par-hidden">H</p>
                                 </a>
-                                <div id="w-node-a9e38041-d19e-8917-5356-bf5cf754a43e-cbfe04b6" class="view-trainer">
+                                <div class="view-trainer">
                                   <div class="arrow-icon-wrapper"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                                 </div>
                               </div>
@@ -285,7 +285,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="scroll-cover-white"></div>
                     </div>
                   </div>
-                  <div id="w-node-_254440b7-fac1-775a-95c3-ae12cbfe04d2-cbfe04b6" class="events-name">
+                  <div class="events-name">
                     <div class="team-item-card-2">
                       <div class="outline-team-card-2">
                         <div class="team-intro-card">
@@ -295,7 +295,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                 <a href="https://kunu.studio/mokytojai#eglek" class="team-link w-inline-block">
                                   <p class="par-hidden">H</p>
                                 </a>
-                                <div id="w-node-_90d2fc71-15cc-9253-55cd-169c9e706ce3-cbfe04b6" class="view-trainer">
+                                <div class="view-trainer">
                                   <div class="arrow-icon-wrapper"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                                 </div>
                               </div>
@@ -317,7 +317,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="scroll-cover-white"></div>
                     </div>
                   </div>
-                  <div id="w-node-_254440b7-fac1-775a-95c3-ae12cbfe04ed-cbfe04b6" class="events-name">
+                  <div class="events-name">
                     <div class="team-item-card-2">
                       <div class="outline-team-card-2">
                         <div class="team-intro-card">
@@ -327,7 +327,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                 <a href="https://kunu.studio/mokytojai#jolita" class="team-link w-inline-block">
                                   <p class="par-hidden">H</p>
                                 </a>
-                                <div id="w-node-afb74091-a8dd-3844-b0cd-b2ca833f15d4-cbfe04b6" class="view-trainer">
+                                <div class="view-trainer">
                                   <div class="arrow-icon-wrapper"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                                 </div>
                               </div>
@@ -349,7 +349,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="scroll-cover-white"></div>
                     </div>
                   </div>
-                  <div id="w-node-_254440b7-fac1-775a-95c3-ae12cbfe0508-cbfe04b6" class="events-name">
+                  <div class="events-name">
                     <div class="team-item-card-2">
                       <div class="outline-team-card-2">
                         <div class="team-intro-card">
@@ -359,7 +359,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                 <a href="https://kunu.studio/mokytojai#neringa" class="team-link w-inline-block">
                                   <p class="par-hidden">H</p>
                                 </a>
-                                <div id="w-node-_892471ca-25bd-b1e1-ac88-067175e39e2f-cbfe04b6" class="view-trainer">
+                                <div class="view-trainer">
                                   <div class="arrow-icon-wrapper"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                                 </div>
                               </div>
@@ -491,7 +491,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="link-text">Visos klasės</div>
                     </div>
                   </a>
-                  <a href="kontaktai.html" class="footer-arrow-link w-inline-block">
+                  <a href="https://kunu.reservio.com/#events-section" class="footer-arrow-link w-inline-block">
                     <div class="button-text-wrapper">
                       <div class="link-text">registracija</div>
                     </div>
@@ -545,7 +545,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="footer-bottom-3">
         <div class="footer-copyright-3">© KUNU Studio</div>
         <div class="footer-rights-wrapper-2">
-          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, LT-11342 Vilnius</div>
+          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
         </div>
       </div>
     </div>
