--- a/sokiu-pamoku-kainos.html
+++ b/sokiu-pamoku-kainos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Feb 25 2025 08:03:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6746a160115d4cae431bdbab" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -97,7 +97,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="sokiu-pamoku-kainos.html" aria-current="page" class="link-header-item w-inline-block w--current">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
+                        <a href="https://kunu.reservio.com/#events-section" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -215,14 +215,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div id="w-node-ec58ce0c-c875-a5c6-3445-70d51bd5f4a8-431bdbab" class="our-instructors padding-0">
         <div id="w-node-a0ad34c9-8c5e-90f2-f95a-e0230b2fadaa-431bdbab" class="events-collection-list-wrapper">
           <div class="kainos_desc">
-            <h1 id="w-node-_093aaa52-9001-17cc-9aec-04772c27b88f-431bdbab">šokio pamokų kainos</h1>
+            <h1>šokio pamokų kainos</h1>
             <div id="w-node-bc791a42-6196-612e-d1a8-5883686f1268-431bdbab" class="about-april">
               <h6 id="w-node-bc791a42-6196-612e-d1a8-5883686f1269-431bdbab" class="black-subtitle">Atrask savo ritmą</h6>
               <h2 class="h2-black-title">Grupinių šokio pamokų narystės</h2>
             </div>
           </div>
           <div class="pricing-grid">
-            <div id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f7849-431bdbab" class="pricing-grid">
+            <div class="pricing-grid">
               <div id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f784a-431bdbab" class="mokejimai-grid">
                 <div id="w-node-cda41379-5b2e-8002-5c3a-c1370b2f784b-431bdbab" class="project-collection-item-2">
                   <div class="event-verticle-card price-item">
@@ -334,7 +334,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <h6 id="w-node-e7518e18-3f4b-3934-114e-7373d4738da7-431bdbab" class="black-subtitle">Nenustok tobulėti</h6>
             <h2 class="h2-black-title">Privačių šokio pamokų kainos</h2>
           </div>
-          <div id="w-node-e9d0b760-dcd5-a767-7459-401f7eb4ec3e-431bdbab" class="kainos-grid grupines">
+          <div class="kainos-grid grupines">
             <div id="w-node-e9d0b760-dcd5-a767-7459-401f7eb4ec3f-431bdbab" class="project-collection-item-2">
               <div data-w-id="e9d0b760-dcd5-a767-7459-401f7eb4ec40" class="event-verticle-card price-item">
                 <div class="verticle-card-image">
@@ -439,7 +439,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div data-w-id="9c74aa10-f40f-cdcf-5d0b-5dd508816e23" class="buttons-wrap">
                   <div class="no-shrink">
-                    <a href="kontaktai.html" class="white-april-button full-mobile w-button">REGISTRACIJA</a>
+                    <a href="https://kunu.reservio.com/#events-section" class="white-april-button full-mobile w-button">REGISTRACIJA</a>
                   </div>
                   <div class="no-shrink">
                     <a href="tvarkarastis.html" class="secondary-white-button w-button">TVARKARAŠTIS</a>
@@ -551,11 +551,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div data-w-id="b2526812-3d43-955a-8e7c-55e321725209" class="faq-grid-pricing">
         <div id="w-node-b2526812-3d43-955a-8e7c-55e32172520a-21725207" class="story-content">
           <div class="faq-list-wrapper">
-            <div data-w-id="b2526812-3d43-955a-8e7c-55e32172520c" class="full-width-faq-list">
+            <div class="full-width-faq-list">
               <div class="line top">
                 <div class="line-faq-fill"></div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172520f" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kokius šokių stilius rasite KUNU studijoje?</div>
                   <div class="faq-cross-icon">
@@ -576,7 +576,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172521e" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kas yra KUNU Studio mokytojai?</div>
                   <div class="faq-cross-icon">
@@ -597,7 +597,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172522d" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar galiu prisijungti prie KUNU Studio kaip pradedantysis?</div>
                   <div class="faq-cross-icon">
@@ -618,7 +618,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172523c" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kokias amžiaus grupes aptarnaujate?</div>
                   <div class="faq-cross-icon">
@@ -639,7 +639,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172524b" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar studijoje organizuojamos pasirodymų galimybės?</div>
                   <div class="faq-cross-icon">
@@ -660,7 +660,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172525a" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kaip galiu užsiregistruoti į pamokas?</div>
                   <div class="faq-cross-icon">
@@ -681,7 +681,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e321725269" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kuo KUNU Studio yra unikali?</div>
                   <div class="faq-cross-icon">
@@ -702,7 +702,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e321725278" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar siūlote privačias pamokas?</div>
                   <div class="faq-cross-icon">
@@ -861,7 +861,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="link-text">Visos klasės</div>
                     </div>
                   </a>
-                  <a href="kontaktai.html" class="footer-arrow-link w-inline-block">
+                  <a href="https://kunu.reservio.com/#events-section" class="footer-arrow-link w-inline-block">
                     <div class="button-text-wrapper">
                       <div class="link-text">registracija</div>
                     </div>
@@ -915,7 +915,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="footer-bottom-3">
         <div class="footer-copyright-3">© KUNU Studio</div>
         <div class="footer-rights-wrapper-2">
-          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, LT-11342 Vilnius</div>
+          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
         </div>
       </div>
     </div>
