--- a/uzsiemimai/siuolaikinio-sokio-pamokos.html
+++ b/uzsiemimai/siuolaikinio-sokio-pamokos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Feb 10 2025 16:27:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Feb 25 2025 08:03:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="675acf2ba4a4cdeeb683340d" data-wf-site="6746a160115d4cae431bdad6" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -99,7 +99,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <a href="../sokiu-pamoku-kainos.html" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">kainos</p>
                         </a>
-                        <a href="https://kunu.reservio.com" class="link-header-item w-inline-block">
+                        <a href="https://kunu.reservio.com/#events-section" class="link-header-item w-inline-block">
                           <p class="nav-menu-item">registracija</p>
                         </a>
                         <div data-hover="true" data-delay="0" class="nav-menu-dropdown-white w-dropdown">
@@ -353,7 +353,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-_0c636234-0ef3-59bb-f66b-e9dc6d081697-b683340d" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="0c636234-0ef3-59bb-f66b-e9dc6d081698" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -398,7 +398,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-_0c636234-0ef3-59bb-f66b-e9dc6d0816b7-b683340d" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="0c636234-0ef3-59bb-f66b-e9dc6d0816b8" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -443,7 +443,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-_0c636234-0ef3-59bb-f66b-e9dc6d0816d7-b683340d" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="0c636234-0ef3-59bb-f66b-e9dc6d0816d8" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -495,7 +495,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="collection-product-list-wrapper">
             <h2 class="padding-bottom padding-medium">Šokio pamokos suaugusiems</h2>
             <div class="grid_classes">
-              <div id="w-node-_0c636234-0ef3-59bb-f66b-e9dc6d0816fc-b683340d" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="0c636234-0ef3-59bb-f66b-e9dc6d0816fd" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -540,7 +540,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08173c-b683340d" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="0c636234-0ef3-59bb-f66b-e9dc6d08173d" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -585,7 +585,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </div>
                 </div>
               </div>
-              <div id="w-node-_0c636234-0ef3-59bb-f66b-e9dc6d08175c-b683340d" class="project-collection-item-2">
+              <div class="project-collection-item-2">
                 <div data-w-id="0c636234-0ef3-59bb-f66b-e9dc6d08175d" class="event-verticle-card">
                   <div class="pamokos-card-image">
                     <div class="class-hero-category">
@@ -641,7 +641,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="grid-wrapper">
       <div id="w-node-_89f17f28-970d-724b-de30-ae4c69afeda2-b683340d" class="klases-wrapper">
         <div class="grid-our-classec colx1">
-          <div id="w-node-a8e09033-dc3d-83ff-ffe7-4fff90344549-b683340d" class="events-collection-list-wrapper">
+          <div class="events-collection-list-wrapper">
             <h2>Mokytojai</h2>
             <div>Visi mūsų mokytojai turi aukštąjį šokio išsilavinimą ir ne pirmus metus dirba su vaikų ir suaugusiųjų grupėm.</div>
             <div class="instructor-grid">
@@ -655,7 +655,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <a href="https://kunu.studio/mokytojai#egleu" class="team-link w-inline-block">
                               <p class="par-hidden">H</p>
                             </a>
-                            <div id="w-node-a9e38041-d19e-8917-5356-bf5cf754a43e-cbfe04b6" class="view-trainer">
+                            <div class="view-trainer">
                               <div class="arrow-icon-wrapper"><img src="../images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="../images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                             </div>
                           </div>
@@ -677,7 +677,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="scroll-cover-white"></div>
                 </div>
               </div>
-              <div id="w-node-_254440b7-fac1-775a-95c3-ae12cbfe04d2-cbfe04b6" class="events-name">
+              <div class="events-name">
                 <div class="team-item-card-2">
                   <div class="outline-team-card-2">
                     <div class="team-intro-card">
@@ -687,7 +687,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <a href="https://kunu.studio/mokytojai#eglek" class="team-link w-inline-block">
                               <p class="par-hidden">H</p>
                             </a>
-                            <div id="w-node-_90d2fc71-15cc-9253-55cd-169c9e706ce3-cbfe04b6" class="view-trainer">
+                            <div class="view-trainer">
                               <div class="arrow-icon-wrapper"><img src="../images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="../images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                             </div>
                           </div>
@@ -709,7 +709,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="scroll-cover-white"></div>
                 </div>
               </div>
-              <div id="w-node-_254440b7-fac1-775a-95c3-ae12cbfe04ed-cbfe04b6" class="events-name">
+              <div class="events-name">
                 <div class="team-item-card-2">
                   <div class="outline-team-card-2">
                     <div class="team-intro-card">
@@ -719,7 +719,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <a href="https://kunu.studio/mokytojai#jolita" class="team-link w-inline-block">
                               <p class="par-hidden">H</p>
                             </a>
-                            <div id="w-node-afb74091-a8dd-3844-b0cd-b2ca833f15d4-cbfe04b6" class="view-trainer">
+                            <div class="view-trainer">
                               <div class="arrow-icon-wrapper"><img src="../images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="../images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                             </div>
                           </div>
@@ -741,7 +741,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="scroll-cover-white"></div>
                 </div>
               </div>
-              <div id="w-node-_254440b7-fac1-775a-95c3-ae12cbfe0508-cbfe04b6" class="events-name">
+              <div class="events-name">
                 <div class="team-item-card-2">
                   <div class="outline-team-card-2">
                     <div class="team-intro-card">
@@ -751,7 +751,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <a href="https://kunu.studio/mokytojai#neringa" class="team-link w-inline-block">
                               <p class="par-hidden">H</p>
                             </a>
-                            <div id="w-node-_892471ca-25bd-b1e1-ac88-067175e39e2f-cbfe04b6" class="view-trainer">
+                            <div class="view-trainer">
                               <div class="arrow-icon-wrapper"><img src="../images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"><img src="../images/1.svg" loading="lazy" alt="Icon" class="arrow-icon"></div>
                             </div>
                           </div>
@@ -799,7 +799,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div data-w-id="9c74aa10-f40f-cdcf-5d0b-5dd508816e23" class="buttons-wrap">
                   <div class="no-shrink">
-                    <a href="../kontaktai.html" class="white-april-button full-mobile w-button">REGISTRACIJA</a>
+                    <a href="https://kunu.reservio.com/#events-section" class="white-april-button full-mobile w-button">REGISTRACIJA</a>
                   </div>
                   <div class="no-shrink">
                     <a href="../tvarkarastis.html" class="secondary-white-button w-button">TVARKARAŠTIS</a>
@@ -817,11 +817,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div data-w-id="b2526812-3d43-955a-8e7c-55e321725209" class="faq-grid-pricing">
         <div id="w-node-b2526812-3d43-955a-8e7c-55e32172520a-21725207" class="story-content">
           <div class="faq-list-wrapper">
-            <div data-w-id="b2526812-3d43-955a-8e7c-55e32172520c" class="full-width-faq-list">
+            <div class="full-width-faq-list">
               <div class="line top">
                 <div class="line-faq-fill"></div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172520f" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kokius šokių stilius rasite KUNU studijoje?</div>
                   <div class="faq-cross-icon">
@@ -842,7 +842,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172521e" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kas yra KUNU Studio mokytojai?</div>
                   <div class="faq-cross-icon">
@@ -863,7 +863,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172522d" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar galiu prisijungti prie KUNU Studio kaip pradedantysis?</div>
                   <div class="faq-cross-icon">
@@ -884,7 +884,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172523c" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kokias amžiaus grupes aptarnaujate?</div>
                   <div class="faq-cross-icon">
@@ -905,7 +905,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172524b" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar studijoje organizuojamos pasirodymų galimybės?</div>
                   <div class="faq-cross-icon">
@@ -926,7 +926,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e32172525a" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kaip galiu užsiregistruoti į pamokas?</div>
                   <div class="faq-cross-icon">
@@ -947,7 +947,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e321725269" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Kuo KUNU Studio yra unikali?</div>
                   <div class="faq-cross-icon">
@@ -968,7 +968,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="line-faq-fill"></div>
                 </div>
               </div>
-              <div data-w-id="b2526812-3d43-955a-8e7c-55e321725278" class="hero-faq-item">
+              <div class="hero-faq-item">
                 <div class="home-faq-top">
                   <div class="text-size-large">Ar siūlote privačias pamokas?</div>
                   <div class="faq-cross-icon">
@@ -1127,7 +1127,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <div class="link-text">Visos klasės</div>
                     </div>
                   </a>
-                  <a href="../kontaktai.html" class="footer-arrow-link w-inline-block">
+                  <a href="https://kunu.reservio.com/#events-section" class="footer-arrow-link w-inline-block">
                     <div class="button-text-wrapper">
                       <div class="link-text">registracija</div>
                     </div>
@@ -1181,7 +1181,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="footer-bottom-3">
         <div class="footer-copyright-3">© KUNU Studio</div>
         <div class="footer-rights-wrapper-2">
-          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, LT-11342 Vilnius</div>
+          <div class="footer-copyright-3">Ukanytes Projects, VšĮ, 306675363, Manufaktūrų g. 16, Vilnius, 11342 Vilniaus m. sav.</div>
         </div>
       </div>
     </div>
